--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,22 @@ button:focus {
   outline: 1px solid var(--color-accent);
 }
 
+/* Common */
+.section {
+  padding: 4rem;
+  text-align: center;
+}
+
+.title {
+  font-size: 2.5rem;
+  margin: 1rem 0;
+}
+
+.description {
+  font-size: 1.5rem;
+  margin: 0.5rem 0;
+}
+
 /* Header */
 .header {
   position: fixed;
@@ -88,10 +104,49 @@ button:focus {
 }
 
 .header__menu__item:hover {
-  border-bottom: 1px solid var(--color-accent);
+  border-bottom: 2px solid var(--color-accent);
 }
 
-.header__menu__item.active {
-  border: 1px solid var(--color-accent);
-  border-radius: 4px;
+/* Home */
+#home {
+  background-color: var(--color-primary);
+  color: var(--color-text);
+  padding: 5rem 1rem;
+  padding-top: 7rem;
+  text-align: center;
+}
+
+.home__avatar {
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 100%;
+  border: 3px solid var(--color-accent);
+}
+
+.home__title {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.home__title--strong {
+  color: var(--color-accent);
+}
+
+.home_-description {
+  font-size: 1.3rem;
+}
+
+.home__contact {
+  display: inline-block;
+  background-color: var(--color-accent);
+  color: var(--color-black);
+  padding: 0.5rem 1rem;
+  margin: 2rem;
+  font-weight: bold;
+}
+
+.home__contact:hover {
+  transform: scale(1.2);
+  transition: all 300ms;
 }
