--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
   --color-blue: #03e8f9;
   --color-orange: #fd6413;
   --color-gray: #1b1e26;
+
+  /* Size */
+  --size-max-width: 1200px;
 }
 
 * {
@@ -107,6 +110,11 @@ button:focus {
   border-bottom: 2px solid var(--color-accent);
 }
 
+.max-container {
+  max-width: var(--size-max-width);
+  margin: auto;
+}
+
 /* Home */
 #home {
   background-color: var(--color-primary);
@@ -144,9 +152,63 @@ button:focus {
   padding: 0.5rem 1rem;
   margin: 2rem;
   font-weight: bold;
+  border-radius: 4px;
 }
 
 .home__contact:hover {
   transform: scale(1.2);
-  transition: all 300ms;
+  transition: all 300ms ease;
+}
+
+/* About */
+.majors {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  margin: 2.5rem 0;
+}
+
+.major {
+  background-color: var(--color-primary-variant);
+  padding: 2rem 1rem;
+  color: var(--color-text);
+  border-radius: 1rem;
+  cursor: default;
+}
+
+.major__icon {
+  font-size: 4rem;
+  margin: 1rem 0;
+  color: var(--color-accent);
+  transition: all 300ms ease;
+}
+
+.major__title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.major:hover .major__icon {
+  transform: rotate(-15deg) scale(1.2);
+}
+
+.jobs {
+  text-align: start;
+}
+
+.job {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 1rem;
+}
+
+.job__name {
+  color: var(--color-primary);
+}
+
+.job__period {
+  color: var(--color-primary);
+  font-size: 0.8rem;
 }
