--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ button:focus {
 
 /* Header */
 .header {
+  background-color: var(--color-black);
   position: fixed;
   top: 0;
   width: 100%;
@@ -110,6 +111,10 @@ button:focus {
   border-bottom: 2px solid var(--color-accent);
 }
 
+.header__menu__item.active {
+  border-bottom: 2px solid var(--color-accent);
+}
+
 .max-container {
   max-width: var(--size-max-width);
   margin: auto;
@@ -119,7 +124,7 @@ button:focus {
 #home {
   background-color: var(--color-primary);
   color: var(--color-text);
-  padding: 5rem 1rem;
+  padding: 1rem 1rem;
   padding-top: 7rem;
   text-align: center;
 }
@@ -150,7 +155,7 @@ button:focus {
   background-color: var(--color-accent);
   color: var(--color-black);
   padding: 0.5rem 1rem;
-  margin: 2rem;
+  margin: 4rem;
   font-weight: bold;
   border-radius: 4px;
 }
@@ -164,7 +169,7 @@ button:focus {
 .majors {
   display: flex;
   justify-content: space-between;
-  gap: 1rem;
+  gap: 3.5rem;
   margin: 2.5rem 0;
 }
 
@@ -174,6 +179,8 @@ button:focus {
   color: var(--color-text);
   border-radius: 1rem;
   cursor: default;
+  box-shadow: 4px 8px 8px rgba(0, 0, 0, 0.38);
+  width: 100%;
 }
 
 .major__icon {
@@ -211,4 +218,67 @@ button:focus {
 .job__period {
   color: var(--color-primary);
   font-size: 0.8rem;
+}
+
+/* Skills */
+#skills {
+  background-color: var(--color-primary-variant);
+  color: var(--color-text);
+}
+
+.skills {
+  display: grid;
+  grid-template-columns: 6fr 4fr;
+  margin: 2rem 3rem;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+}
+
+.skills__title {
+  color: var(--color-accent);
+  margin: 1rem 0;
+  font-size: 1.2rem;
+}
+
+.skills__coding {
+  grid-row: span 2;
+  padding: 1rem;
+  background-color: var(--color-primary);
+}
+
+.skills__tools {
+  padding: 1rem;
+}
+
+.skills__etc {
+  padding: 1rem;
+  background-color: var(--color-primary);
+  filter: brightness(150%);
+}
+
+.bar {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 0.5rem;
+}
+
+.bar__metadata {
+  display: flex;
+  justify-content: space-between;
+}
+
+.bar__bg {
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-primary-variant);
+}
+
+.bar__value {
+  height: 3px;
+  background-color: var(--color-accent);
 }
