--- a/css/style.css
+++ b/css/style.css
@@ -383,7 +383,7 @@ button:focus {
   background-color: var(--color-accent);
 }
 
-/* Testimonial */
+/* Testimonials */
 .testimonials {
   margin: 3rem;
 }
@@ -416,4 +416,40 @@ button:focus {
   color: var(--color-accent);
   font-weight: bold;
   filter: brightness(70%);
+}
+
+/* Arrow up */
+.arrow-up {
+  background-color: var(--color-primary);
+  position: fixed;
+  bottom: 3rem;
+  right: 3rem;
+  font-size: 3rem;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 100%;
+  text-align: center;
+  box-shadow: 0 8px 30px var(--color-accent);
+}
+
+/* Footer */
+#contact {
+  background-color: var(--color-primary);
+  color: var(--color-text);
+}
+
+.contact__links {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  padding: 1rem;
+  font-size: 2rem;
+}
+
+.contact__link {
+  transition: all 300ms ease;
+}
+
+.contact__link:hover {
+  color: var(--color-accent);
 }
