CSS: Avatar svg

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
     rgba(5, 10, 19, 1) 100%
   );
   --home-bg-svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1600 900'%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='1' y2='0' gradientTransform='rotate(0,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%2303E8F9'/%3E%3Cstop offset='1' stop-color='%23CF6'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(0,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%23F00'/%3E%3Cstop offset='1' stop-color='%23FC0'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23FFF' fill-opacity='0' stroke-miterlimit='10'%3E%3Cg stroke='url(%23a)' stroke-width='3.3'%3E%3Cpath transform='translate(-45.5 -12) rotate(-13.5 1409 581) scale(0.8888)' d='M1409 581 1450.35 511 1490 581z'/%3E%3Ccircle stroke-width='1.1' transform='translate(-110 50) rotate(-5 800 450) scale(0.9848999999999999)' cx='500' cy='100' r='40'/%3E%3Cpath transform='translate(-19 30) rotate(-70 401 736) scale(0.9848999999999999)' d='M400.86 735.5h-83.73c0-23.12 18.74-41.87 41.87-41.87S400.86 712.38 400.86 735.5z'/%3E%3C/g%3E%3Cg stroke='url(%23b)' stroke-width='1'%3E%3Cpath transform='translate(300 20) rotate(-5 150 345) scale(1.0296)' d='M149.8 345.2 118.4 389.8 149.8 434.4 181.2 389.8z'/%3E%3Crect stroke-width='2.2' transform='translate(20 -145) rotate(-108 1089 759)' x='1039' y='709' width='100' height='100'/%3E%3Cpath transform='translate(-76 4) rotate(-18 1400 132) scale(0.8)' d='M1426.8 132.4 1405.7 168.8 1363.7 168.8 1342.7 132.4 1363.7 96 1405.7 96z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  --home-avatar-svg: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox="0020001800" fill="%2303E8F9"><path d="M1386.57181.4c160.973.74328.5149.72424.59281.5796.09129.61118.44315.0998.33487.16-20.11172.07-84.92332.97-187.71446.94-105.03116.2-250.29185.48-391.07243.58-138.5560.34-272.63109.5-393.3191.62-122.91-17.88-234.64-102.8-377.66-160.9-143.02-58.1-317.33-87.15-406.71-183.24-89.39-96.09-96.09-261.462.23-368.7298.33-109.5301.68-160.9384.37-270.482.68-111.7342.46-283.8184.92-422.36C669.24188.1798.8680.83937.4160.72c140.79-20.11290.5149.16449.17120.67Z"></path></svg>");
 
   /* Colors */
   --color-white: #ffffff;
@@ -152,20 +153,31 @@ button:focus {
 
 /* Home */
 #home {
+  position: relative;
   background-color: var(--color-primary);
   background-image: var(--home-bg-svg);
   color: var(--color-text);
   padding: 1rem 1rem;
   padding-top: 7rem;
   text-align: center;
+  overflow: hidden;
+}
+
+.home__container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-top: 3rem;
 }
 
 .home__avatar {
-  width: 250px;
-  height: 250px;
+  background: var(--home-avatar-svg);
+  position: relative;
+  bottom: -70px;
+  width: 300px;
+  height: 300px;
   object-fit: cover;
-  border-radius: 100%;
-  border: 3px solid var(--color-accent);
+  transform: scaleX(-1) rotate(-5deg);
 }
 
 .home__title {
